crates/viewer_support/re_dataframe_ui/tests/snapshots/filter_tests__float_lists@lt_2.0.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Float(
        FloatFilter {
            operator: Lt,
            rhs_value: Some(
                2.0,
            ),
        },
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                data_type: Float64,
                nullable: true,
            },
        ),
    },
    unfiltered: ListArray
    [
      PrimitiveArray<Float64>
    [
      1.0,
      2.0,
      3.0,
    ],
      PrimitiveArray<Float64>
    [
      2.0,
    ],
      PrimitiveArray<Float64>
    [
      2.0,
      2.0,
    ],
      PrimitiveArray<Float64>
    [
      4.0,
      5.0,
      6.0,
    ],
      PrimitiveArray<Float64>
    [
      7.0,
      4.0,
      9.0,
    ],
      PrimitiveArray<Float64>
    [
      5.0,
      2.0,
      1.0,
    ],
    ],
    filtered: ListArray
    [
      PrimitiveArray<Float64>
    [
      1.0,
      2.0,
      3.0,
    ],
      PrimitiveArray<Float64>
    [
      5.0,
      2.0,
      1.0,
    ],
    ],
}
